// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`t-on t-on expression captured in t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, withKey } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['this'].otherState.vals.push(ctx['iter']+'_'+ctx['iter']);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div><button block-handler-0="click">expr</button></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 0;
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].arr);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`val\`] = k_block2[i1];
      const key1 = ctx['val'];
      let hdlr1 = [hdlr_fn1, ctx];
      ctx1["iter"] = ctx['iter']+1;
      c_block2[i1] = withKey(block3([hdlr1]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on expression in t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['this'].otherState.vals.push(ctx['val']);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div><block-child-0/>: <block-child-1/><button block-handler-0="click">Expr</button></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.values);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`val\`] = k_block2[i1];
      ctx[\`val_index\`] = i1;
      const key1 = ctx['val'];
      const b4 = safeOutput(ctx['val_index']);
      const b5 = safeOutput(ctx['val']+'');
      let hdlr1 = [hdlr_fn1, ctx];
      c_block2[i1] = withKey(block3([hdlr1], [b4, b5]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on expression in t-foreach with t-set 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['this'].otherState.vals.push(ctx['val']+'_'+ctx['bossa']);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div><block-child-0/>: <block-child-1/><button block-handler-0="click">Expr</button></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["bossa"] = 'nova';
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.values);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`val\`] = k_block2[i1];
      ctx[\`val_index\`] = i1;
      const key1 = ctx['val'];
      ctx1["bossa"] = ctx['bossa']+'_'+ctx['val_index'];
      const b4 = safeOutput(ctx['val_index']);
      const b5 = safeOutput(ctx['val']+'');
      let hdlr1 = [hdlr_fn1, ctx];
      c_block2[i1] = withKey(block3([hdlr1], [b4, b5]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on method call in t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['this'].addVal(ctx['val']);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div><block-child-0/>: <block-child-1/><button block-handler-0="click">meth call</button></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.values);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`val\`] = k_block2[i1];
      ctx[\`val_index\`] = i1;
      const key1 = ctx['val'];
      const b4 = safeOutput(ctx['val_index']);
      const b5 = safeOutput(ctx['val']+'');
      let hdlr1 = [hdlr_fn1, ctx];
      c_block2[i1] = withKey(block3([hdlr1], [b4, b5]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on component next to t-on on div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createCatcher } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["value"]);
  const hdlr_fn1 = (ctx, ev) => (ctx['this'].increment).call(ctx['this'], ev);
  const catcher1 = createCatcher({"click":0});
  const hdlr_fn2 = (ctx, ev) => (ctx['this'].decrement).call(ctx['this'], ev);
  
  let block1 = createBlock(\`<div><block-child-0/><p block-handler-0="click">dec</p></div>\`);
  
  return function template(ctx, node, key = "") {
    const hdlr1 = [hdlr_fn1, ctx];
    const b2 = catcher1(comp1({value: ctx['this'].state.value}, key + \`__1\`, node, this, null), [hdlr1]);
    let hdlr2 = [hdlr_fn2, ctx];
    return block1([hdlr2], [b2]);
  }
}"
`;

exports[`t-on t-on on component next to t-on on div 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<button><block-child-0/></button>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on components 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createCatcher } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["value"]);
  const hdlr_fn1 = (ctx, ev) => (ctx['this'].increment).call(ctx['this'], ev);
  const catcher1 = createCatcher({"click":0});
  
  return function template(ctx, node, key = "") {
    const hdlr1 = [hdlr_fn1, ctx];
    return catcher1(comp1({value: ctx['this'].state.value}, key + \`__1\`, node, this, null), [hdlr1]);
  }
}"
`;

exports[`t-on t-on on components 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<button><block-child-0/></button>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on components and t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, createCatcher, withKey } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["value"]);
  const hdlr_fn1 = (ctx)=>ctx['this'].log(ctx['name']);
  const catcher1 = createCatcher({"click":0});
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(['John','Raoul','Gérald']);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`name\`] = k_block1[i1];
      const key1 = ctx['name'];
      const hdlr1 = [hdlr_fn1, ctx];
      c_block1[i1] = withKey(catcher1(comp1({value: ctx['name']}, key + \`__1__\${key1}\`, node, this, null), [hdlr1]), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-on t-on on components and t-foreach 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on components, variation 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createCatcher } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["value"]);
  const hdlr_fn1 = (ctx, ev) => (ctx['this'].increment).call(ctx['this'], ev);
  const catcher1 = createCatcher({"click":0});
  
  let block1 = createBlock(\`<div><span/><block-child-0/><p/></div>\`);
  
  return function template(ctx, node, key = "") {
    const hdlr1 = [hdlr_fn1, ctx];
    const b2 = catcher1(comp1({value: ctx['this'].state.value}, key + \`__1\`, node, this, null), [hdlr1]);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on components, variation 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<button><block-child-0/></button>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on components, with 'prevent' modifier 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createCatcher } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["value"]);
  const hdlr_fn1 = (ctx, ev) => (ctx['this'].increment).call(ctx['this'], ev);
  const catcher1 = createCatcher({"click.prevent":0});
  
  return function template(ctx, node, key = "") {
    const hdlr1 = ["prevent", hdlr_fn1, ctx];
    return catcher1(comp1({value: ctx['this'].state.value}, key + \`__1\`, node, this, null), [hdlr1]);
  }
}"
`;

exports[`t-on t-on on components, with 'prevent' modifier 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<button><block-child-0/></button>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on components, with a handler update 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createCatcher } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["value"]);
  const hdlr_fn1 = (ctx)=>ctx['this'].log(ctx['name']);
  const catcher1 = createCatcher({"click":0});
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["name"] = ctx['this'].state.name;
    const hdlr1 = [hdlr_fn1, ctx];
    return catcher1(comp1({value: ctx['name']}, key + \`__1\`, node, this, null), [hdlr1]);
  }
}"
`;

exports[`t-on t-on on components, with a handler update 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on destroyed components 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.flag) {
      b2 = comp1({}, key + \`__1\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-on t-on on destroyed components 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx, ev) => (ctx['this'].onClick).call(ctx['this'], ev);
  
  let block1 = createBlock(\`<div block-handler-0="click"/>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on t-on on slot, with 'prevent' modifier 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { markRaw } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, true, false, []);
  
  let block1 = createBlock(\`<button>button</button>\`);
  
  function slot1(ctx, node, key = "") {
    return block1();
  }
  
  return function template(ctx, node, key = "") {
    return comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-on t-on on slot, with 'prevent' modifier 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callSlot, createCatcher } = helpers;
  const hdlr_fn1 = (ctx, ev) => (ctx['this'].doSomething).call(ctx['this'], ev);
  const catcher1 = createCatcher({"click.prevent":0});
  
  return function template(ctx, node, key = "") {
    const hdlr1 = ["prevent", hdlr_fn1, ctx];
    return catcher1(callSlot(ctx, node, key, 'default', false, {}), [hdlr1]);
  }
}"
`;

exports[`t-on t-on on t-call-slots 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { markRaw } = helpers;
  const comp1 = app.createComponent(\`Child\`, true, true, false, []);
  
  let block1 = createBlock(\`<p>something</p>\`);
  
  function slot1(ctx, node, key = "") {
    return block1();
  }
  
  return function template(ctx, node, key = "") {
    return comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-on t-on on t-call-slots 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, callSlot, createCatcher } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['this'].state.count++;
  const catcher1 = createCatcher({"click":0});
  
  return function template(ctx, node, key = "") {
    const b2 = text(\` [\`);
    const b3 = safeOutput(ctx['this'].state.count);
    const b4 = text(\`] \`);
    const hdlr1 = [hdlr_fn1, ctx];
    const b5 = catcher1(callSlot(ctx, node, key, 'default', false, {}), [hdlr1]);
    return multi([b2, b3, b4, b5]);
  }
}"
`;

exports[`t-on t-on on t-set-slots 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, createCatcher, markRaw } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['this'].state.count++;
  const catcher1 = createCatcher({"click":0});
  const comp1 = app.createComponent(\`Child\`, true, true, false, []);
  
  let block6 = createBlock(\`<p>something</p>\`);
  let block7 = createBlock(\`<p>paragraph</p>\`);
  
  function slot1(ctx, node, key = "") {
    const b6 = block6();
    const b7 = block7();
    const hdlr1 = [hdlr_fn1, ctx];
    return catcher1(multi([b6, b7]), [hdlr1]);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = text(\` [\`);
    const b3 = safeOutput(ctx['this'].state.count);
    const b4 = text(\`] \`);
    const b8 = comp1({slots: markRaw({'myslot': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    return multi([b2, b3, b4, b8]);
  }
}"
`;

exports[`t-on t-on on t-set-slots 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    return callSlot(ctx, node, key, 'myslot', false, {});
  }
}"
`;

exports[`t-on t-on when first component child is an empty component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createCatcher } = helpers;
  const hdlr_fn1 = (ctx, ev) => (ctx['this'].push).call(ctx['this'], ev);
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["list"]);
  const hdlr_fn2 = (ctx)=>{};
  const catcher1 = createCatcher({"click":0});
  
  let block1 = createBlock(\`<div block-handler-0="click"><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    const hdlr2 = [hdlr_fn2, ctx];
    const b2 = catcher1(comp1({list: ctx['this'].list}, key + \`__1\`, node, this, null), [hdlr2]);
    return block1([hdlr1], [b2]);
  }
}"
`;

exports[`t-on t-on when first component child is an empty component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  
  let block2 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].props.list);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`c\`] = k_block1[i1];
      ctx[\`c_index\`] = i1;
      const key1 = ctx['c_index'];
      const b3 = safeOutput(ctx['c']);
      c_block1[i1] = withKey(block2([], [b3]), key1);
    }
    return list(c_block1);
  }
}"
`;
